Scrollbar fix

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -10,5 +10,5 @@
     border-radius: 1rem;
     height: 100%;
     width: 100%;
-    overflow: scroll;
+    overflow-y: auto;
 }
